src/objects/ffr__ReportingFilterMapping__c.object
<CustomObject>
    <customHelpPage>ffr__helpreportingfilter</customHelpPage>
    <fields>
        <fullName>ffr__QualifiedKey__c</fullName>
        <formula>TRIM(TEXT(ffr__Type__c) + &apos; &apos; + TEXT(ffr__TemplateKey__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type / Template Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__ReportingDataRange__c</fullName>
        <label>Reporting Data Range</label>
        <referenceTo>ffr__ReportingDataRange__c</referenceTo>
        <relationshipLabel>Reporting Filters Mapping</relationshipLabel>
        <relationshipName>ReportingFiltersMapping</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffr__ReportingFilter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Filter</label>
        <referenceTo>ffr__ReportingFilter__c</referenceTo>
        <relationshipLabel>Reporting Filters Mapping</relationshipLabel>
        <relationshipName>ReportingFiltersMapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__TemplateKey__c</fullName>
        <label>Template Key</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ffr__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <default>true</default>
                    <label>A</label>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>Q</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Columns</fullName>
                </value>
                <value>
                    <fullName>Rows</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reporting Filter Mapping</label>
    <nameField>
        <label>Reporting Filter Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Filters Mapping</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>